fix yandex disk

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                             <div class="t-btnwrapper t182__btnwrapper t-animate t-animate_started"
                                                 data-animate-style="fadeinup" data-animate-group="yes"
                                                 style="transition-delay: 0.5s;"> <a
-                                                    href="https://disk.yandex.ru/d/fTuUgKECGjNBpA" target="_blank"
+                                                    href="https://disk.yandex.ru/d/CP8nWdoGNGGdJQ" target="_blank"
                                                     class="t182__btn t-btn t-btn_md "
                                                     data-btneffects-first="btneffects-flash"
                                                     style="color:#ffffff;border:3px solid #ffffff;border-radius:60px; -moz-border-radius:60px; -webkit-border-radius:60px;"
@@ -131,7 +131,7 @@
                                             <div class="t-btnwrapper t182__btnwrapper t-animate t-animate_started"
                                                 data-animate-style="fadeinup" data-animate-group="yes"
                                                 style="transition-delay: 0.9s;"> <a
-                                                    href="https://disk.yandex.ru/d/m2CLLj3TxefThQ" target="_blank"
+                                                    href="https://disk.yandex.ru/d/pDHHClsTMi5D4Q" target="_blank"
                                                     class="t182__btn t-btn t-btn_md "
                                                     data-btneffects-second="btneffects-flash"
                                                     style="color:#ffffff;border:3px solid #ffffff;border-radius:60px; -moz-border-radius:60px; -webkit-border-radius:60px;"
@@ -754,7 +754,7 @@
                 <div class="t-container_100">
                     <div class="t142__wrapone">
                         <div class="t142__wraptwo"> <a class="t-btn t142__submit t142__submit_size_xl"
-                                href="https://disk.yandex.ru/d/rRGzWD3xZ5BP_Q" target="_blank"
+                                href="https://disk.yandex.ru/d/KhHlxFkDc6BAFw" target="_blank"
                                 style="color:#000000;border:3px solid #000000;border-radius:60px; -moz-border-radius:60px; -webkit-border-radius:60px;"
                                 data-buttonfieldset="button" data-btneffects-first="btneffects-flash" rel="noopener">
                                 <span class="t142__text">Рефераты</span>
@@ -906,7 +906,7 @@
                 <div class="t-container_100">
                     <div class="t142__wrapone">
                         <div class="t142__wraptwo"> <a class="t-btn t142__submit t142__submit_size_xl"
-                                href="https://disk.yandex.ru/d/ILnWQrv_Rwq-sQ" target="_blank"
+                                href="https://disk.yandex.ru/d/AqHwfZdBK9jH5A" target="_blank"
                                 style="color:#000000;border:3px solid #000000;border-radius:60px; -moz-border-radius:60px; -webkit-border-radius:60px;"
                                 data-buttonfieldset="button" data-btneffects-first="btneffects-flash" rel="noopener">
                                 <span class="t142__text">Книги</span>
