--- a/index.html
+++ b/index.html
@@ -1209,11 +1209,11 @@
             <div class="t142">
                 <div class="t-container_100">
                     <div class="t142__wrapone">
-                        <div class="t142__wraptwo"> <a class="t-btn t142__submit t142__submit_size_xl" href="/pages"
+                        <div class="t142__wraptwo"> <a class="t-btn t142__submit t142__submit_size_xl" href="https://tdanelanfile.wixsite.com/info"
                                 target="_blank"
                                 style="color:#000000;border:3px solid #000000;border-radius:60px; -moz-border-radius:60px; -webkit-border-radius:60px;"
                                 data-buttonfieldset="button" data-btneffects-first="btneffects-flash"> <span
-                                    class="t142__text">Сайты</span>
+                                    class="t142__text">Главный сайт</span>
                                 <div class="t-btn_wrap-effects t-btn_wrap-effects_md">
                                     <div class="t-btn_effects"></div>
                                 </div>
